# mm-bridge

./: .gitignore  CLAUDE-include.md  INSTALL.md  ISSUE-typing-indicator.md  LICENSE  README.md  pyproject.toml  run.sh.example
deploy/systemd/: agent-chatops.target  agent-harness.service  mm-bridge.service
specs/20260417-mattermost-bridge-v2/: design.md  overview.md  requirements.md
specs/20260422-mm-bridge-channels/: OVERVIEW.md
specs/20260422-mm-bridge-post/: OVERVIEW.md
specs/20260422-mm-bridge-read/: OVERVIEW.md
specs/20260422-tool-use-noise/: OVERVIEW.md
specs/20260426-cross-bot-conversations/: NOTES.md
specs/20260508-channel-header-resume-command/: design.md  overview.md  requirements.md
specs/20260511-agent-harness-backend/: design.md  requirements.md
specs/20260511-resume-purpose-with-cwd/: overview.md  requirements.md
src/mm_bridge/: agent_harness_client.py  attribution.py  backend_errors.py  bridge.py  cli.py  codex_session.py  commands.py  config.py  directives.py  main.py  mm_client.py  name_sync.py  purpose.py  resume_header.py  sidecar.py  spawn.py  typing_indicator.py  vd_client.py  watchdog_notices.py
tests/: doubles.py  test_agent_harness_client.py  test_agent_harness_integration.py  test_anchor.py  test_attachment_roots.py  test_attribution.py  test_backend_error_format.py  test_backend_error_surfacing.py  test_bot_name.py  test_bridge.py  test_cli.py  test_cli_channels.py  test_cli_doctor.py  test_cli_post.py  test_cli_read.py  test_cli_stdin.py  test_codex_proc_lookup.py  test_codex_session.py  test_commands.py  test_config.py  test_dependencies.py  test_directives.py  test_e2e_config_paths.py  test_mm_client.py  test_name_sync.py  test_purpose.py  test_resume_header.py  test_self_post_contract.py  test_sidecar.py  test_spawn.py  test_watchdog_notices.py
