[project]
name = "mm-bridge"
version = "0.1.0"
description = "Mattermost ↔ agent-harness bridge — one channel per coding-agent session"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    # Cap below 11.8: mm_client imports `Driver`, which 11.8.x dropped
    # (renamed to `TypedDriver`). 11.7.2 is the last release exporting it.
    # `uv tool install` resolves fresh from here and ignores uv.lock, so
    # without this bound a clean install pulls 11.9.0 → ImportError. See
    # tests/test_dependencies.py.
    "mattermostautodriver>=2.0.0,<11.8",
    "httpx>=0.27",
    "httpx-sse>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mm_bridge"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[project.scripts]
mm-bridge = "mm_bridge.main:main"

[tool.pytest.ini_options]
# Keep a bare `pytest` from the repo root green: don't descend into sibling
# worktrees (each carries its own copy of this suite → duplicate collection)
# or the virtualenv.
norecursedirs = ["worktree", "worktrees", ".venv"]
